Preview for image and audio working. TODO: Text preview with scrollbar, model bug fix, about section, dockerize

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -83,7 +83,8 @@ input[type="file"] {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
-    margin-top: 10px;
+    display: block; /* Prevents any extra space below the image */
+    margin: 0 auto; /* Center the image horizontally within the container */
 }
 
 a {
